yml and other improvement
